Fix params in swagger
