# api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
-basePath: /docs
+basePath: /
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -18,14 +18,14 @@ consumes:
 produces:
   - application/json
 paths:
-  /employee/{employeeId}:
+  /employee/{id}:
     x-swagger-router-controller: employee
     get:
       description: Returns employee to the caller
       operationId: employee
       parameters:
-        - name: employeeId
-          in: path
+        - in: path
+          name: id
           type: integer
           required: true
           description: Numeric ID of the employee to get.
@@ -60,8 +60,8 @@ paths:
       # used as the method name of the controller
       operationId: hello
       parameters:
-        - name: name
-          in: query
+        - in: query
+          name: name
           description: The name of the person to whom to say hello
           required: false
           type: string
@@ -94,7 +94,7 @@ definitions:
           type: string
           description: The employee guid.
         isAllocated:
-          type: string
+          type: boolean
           description: The employee availability.
         salary:
           type: string
@@ -150,7 +150,6 @@ definitions:
                 type: integer
                 description: The skill level.
   EmployeeResponse:
-    type: object
     description: The employee.
     properties:
       id:
@@ -160,7 +159,7 @@ definitions:
         type: string
         description: The employee guid.
       isAllocated:
-        type: string
+        type: boolean
         description: The employee availability.
       salary:
         type: string
